--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,23 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": [
+	"eslint:recommended",
+	"plugin:@typescript-eslint/recommended",
+	"plugin:react/recommended"
+  ],
+  "env": {
+	"browser": true,
+	"es2021": true
+  },
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+	"ecmaVersion": "latest",
+	"sourceType": "module"
+  },
+  "plugins": [
+	"@typescript-eslint",
+	"react"
+  ],
+  "rules": {
+	"react/react-in-jsx-scope": "off"
+  }
 }
