--- a/package.json
+++ b/package.json
@@ -1,26 +1,42 @@
 {
-  "name": "boilerplate-apps-router",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
-  }
+    "name": "boilerplate-apps-router",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "test": "jest --passWithNoTests --maxWorkers=50%",
+        "test:watch": "jest --watch --maxWorkers=25%",
+        "test:ci": "jest --runInBand",
+        "start": "next start",
+        "lint": "next lint",
+        "prepare": "husky install"
+    },
+    "dependencies": {
+        "next": "14.2.5",
+        "react": "^18",
+        "react-dom": "^18",
+        "styled-components": "^6.1.12"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.7.0",
+        "@testing-library/jest-dom": "^6.4.6",
+        "@testing-library/react": "^16.0.0",
+        "@testing-library/user-event": "^14.5.2",
+        "@types/jest": "^29.5.12",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "eslint": "^8.57.0",
+        "eslint-config-next": "14.2.5",
+        "eslint-plugin-react": "^7.34.4",
+        "globals": "^15.8.0",
+        "husky": "^8.0.0",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "lint-staged": "^15.2.7",
+        "prettier": "3.3.3",
+        "typescript": "^5",
+        "typescript-eslint": "^7.16.1"
+    }
 }
