--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,32 @@
 {
-  "extends": [
-	"eslint:recommended",
-	"plugin:@typescript-eslint/recommended",
-	"plugin:react/recommended"
-  ],
-  "env": {
-	"browser": true,
-	"es2021": true
-  },
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-	"ecmaVersion": "latest",
-	"sourceType": "module"
-  },
-  "plugins": [
-	"@typescript-eslint",
-	"react"
-  ],
-  "rules": {
-	"react/react-in-jsx-scope": "off"
-  }
+    "extends": [
+        "eslint:recommended",
+        "next/core-web-vitals",
+        "plugin:react/recommended",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:@next/next/recommended"
+    ],
+    "env": {
+        "browser": true,
+        "es2021": true
+    },
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    },
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
+    "plugins": ["react", "@typescript-eslint"],
+    "rules": {
+        "react-hooks/rules-of-hooks": "error",
+        "react-hooks/exhaustive-deps": "warn",
+        "react/prop-types": "off",
+        "react/react-in-jsx-scope": "off",
+        "@typescript-eslint/explicit-module-boundary-types": "off"
+    }
 }
