--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
         "test": "jest --passWithNoTests --maxWorkers=50%",
         "test:watch": "jest --watch --maxWorkers=25%",
         "test:ci": "jest --runInBand",
+        "generate": "npx plop --plopfile generators/plopfile.js",
         "start": "next start",
         "lint": "next lint",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "storybook": "storybook dev -p 6006",
+        "build-storybook": "storybook build"
     },
     "dependencies": {
         "next": "14.2.5",
@@ -19,7 +22,16 @@
         "styled-components": "^6.1.12"
     },
     "devDependencies": {
+        "@chromatic-com/storybook": "^1.6.1",
         "@eslint/js": "^9.7.0",
+        "@storybook/addon-essentials": "^8.2.5",
+        "@storybook/addon-interactions": "^8.2.5",
+        "@storybook/addon-links": "^8.2.5",
+        "@storybook/addon-onboarding": "^8.2.5",
+        "@storybook/blocks": "^8.2.5",
+        "@storybook/nextjs": "^8.2.5",
+        "@storybook/react": "^8.2.5",
+        "@storybook/test": "^8.2.5",
         "@testing-library/jest-dom": "^6.4.6",
         "@testing-library/react": "^16.0.0",
         "@testing-library/user-event": "^14.5.2",
@@ -30,12 +42,16 @@
         "eslint": "^8.57.0",
         "eslint-config-next": "14.2.5",
         "eslint-plugin-react": "^7.34.4",
+        "eslint-plugin-storybook": "^0.8.0",
         "globals": "^15.8.0",
         "husky": "^8.0.0",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
+        "jest-styled-components": "^7.2.0",
         "lint-staged": "^15.2.7",
+        "plop": "^4.0.1",
         "prettier": "3.3.3",
+        "storybook": "^8.2.5",
         "typescript": "^5",
         "typescript-eslint": "^7.16.1"
     }
